Fix for cases headings alignment

--- a/sass/_sections.scss
+++ b/sass/_sections.scss
@@ -383,6 +383,7 @@ section#cases {
       font-size: $smallHeading;
       margin: 30px 0 12px;
       color: $brand-primary;
+      max-width: 360px;
     }
 
     p.intro {
